Fix mobile spacing on ex-header margin-top

--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -106,7 +106,7 @@
   }
 
   .ex-header  {
-    margin: 5px 0px 0px 0px;
+    margin: 15px 0px 0px 0px;
   }
   
 
